feat: React Context 로그인 상태 전역 관리 + CORS 수정
- MemberContext.jsx: createContext + AuthProvider + useAuth 훅 추가
- main.jsx: AuthProvider로 App 감싸기
- MemberLogin.jsx: useRef 유지 + login(r) Context 연동 + navigate 이동
- Header.jsx: isLogin 분기 (로그인 전 링크 / 후 username + 로그아웃)
- Index.jsx: member 표시 + logout 버튼
- App.jsx: Index + MemberLogin 라우터 구성
- LoginRequest.java: username 필드로 변경 (프론트 JSON 키 일치)
- JwtAuthDTO.java: name, email 필드 추가
- JwtAuthenticationFilter.java: MemberRepository 주입, nickname/email 응답 포함
- SecurityConfig.java: CORS 192.168.0.90 추가, Content-Type/OPTIONS 허용